# qa-framework

./: .gitignore  CI_CD_GUIDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  nightly.yml  pr_gate.yml  pyproject.toml  pytest.ini  release_gate.yml  settings.py
.github/workflows/: nightly.yml  pr_gate.yml
config/: __init__.py
config/environments/: local.env  staging.env
pages/: home_page.py  trade_page.py
tests/: conftest.py  conftest_swapped.py  swapped_ui_tests.yml  test_swapped_homepage.py  test_swapped_trade.py
tests/api/: conftest.py  test_api_example.py
tests/integration/: test_integration_example.py
tests/ui/: conftest.py  test_ui_example.py
tests/ui/pages/: base_page.py  login_page.py
utils/: __init__.py  api_client.py  assertions.py  data_factory.py  retry.py
